# swc-plugin-react-auto-classnames

./: Cargo.toml  README.md  package.json  swc-plugin-react-auto-classnames-0.1.1.tgz  swc_plugin_react_auto_classnames.wasm
src/: add_classname.rs  add_classname_copy.rs  is_jsx.rs  lib.rs
