[package]
name = "swc-plugin-react-auto-classnames"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform", "__parser"] }
tracing = { version="0.1", features = ["release_max_level_info"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
