[package]
name = "swc-plugin-react-auto-classnames"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.88.*", features = ["ecma_plugin_transform", "ecma_parser"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
